--- a/sweetpotato.html
+++ b/sweetpotato.html
@@ -6,8 +6,8 @@
 	<title>蔡承祐簡介</title>
 </head>
 <body>
-	<h1>楊子青</h1>
-	<h2>Tzyy-Ching Yang</h2>
+	<h1>蔡承祐</h1>
+	<h2>CHENG-YU TSAI</h2>
 
 	個人網頁：https://www1.pu.edu.tw/~tcyang<br>
 	FB：https://www.facebook.com/tcyang1971<br>
