--- a/sweetpotato.html
+++ b/sweetpotato.html
@@ -6,18 +6,29 @@
 	<title>蔡承祐簡介</title>
 	<style type="text/css">
 		* { font-family:"標楷體"; margin-left:auto; margin-right:auto;}
-		h1 {color:blue; font-size:60px;}
-		h2 {color:#33ff33; font-size:40px;}
+		h1 {color:#ffc0cb; font-size:60px;}
+		h2 {color:#81D8D0; font-size:40px;}
 	</style>
+	<script>
+		function change1() {
+  			document.getElementById("pic").src = "mountain.jpg";
+  			document.getElementById("h2text").innerText = "靜宜資管";
+		}
+
+		function change2() {
+  			document.getElementById("pic").src = "cliff.jpg";
+  			document.getElementById("h2text").innerText = "Tzyy-Ching Yang";
+		}
+	</script>
 </head>
 <body>
 	<table width="70%">
 		<tr>
-			<img src="cliff.jpg"width="110%"></img>
+			<img src="cliff.jpg" width="110%" id="pic" onmouseover="change1()" onmouseout="change2()"></img>
 		</td>>
 		<td>
 			<h1>蔡承祐</h1>
-			<h2>CHENG-YU TSAI</h2>
+			<h2 id="h2text">CHENG-YU TSAI</h2>
 		</td>
 	<tr/>
 	</table>
